--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "serve ."
+    "start": "serve . -n"
   },
   "keywords": [],
   "author": "Joshua Comeau",
